# The-AI-Native-Project-Scaffolder

./: .aider.conf.yml  .gitignore  .yamllint  AI_DIRECTIVES.md  CHANGELOG.md  CONTEXT.md  GEMINI.md  LICENSE  README.md  WORKFLOW.md  init_project.py  pyproject.toml  requirements-dev.txt  requirements.txt
.agent/rules/: ai_behavior.md
.github/workflows/: unittests.yml
.obsidian/: workspace.json
ansible/: setup_workstation.yml
docs/: AI_INSIGHTS.md
docs/features/: 01_pre_commit_hooks.md  02_interactive_mode.md  03_jinja2_templates.md  04_package_manager_support.md  05_global_configuration.md  06_doc_site_generator.md  07_project_profiles.md  ai_insights_memory.md  feature_1.md
docs/templates/: feature_template.md
rules/: ai_behavior.md
scripts/: run_tests.sh
src/new_project_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/project_generator/: cli.py  config_manager.py  engine.py  git_ops.py  wizard.py
src/project_generator/assets/: configs.py  templates.py
src/project_generator/templates/: .flake8.j2  .gitignore.j2  .pre-commit-config.yaml.j2  AI_DIRECTIVES.md.j2  CONTEXT.md.j2  GEMINI.md.j2  README.md.j2  WORKFLOW.md.j2  mkdocs.yml.j2  pyproject.toml.j2  requirements-dev.txt.j2  requirements.txt.j2
src/project_generator/templates/ansible/: setup_workstation.yml.j2
src/project_generator/templates/docs/: AI_INSIGHTS.md.j2  index.md.j2
tests/: test_cli.py  test_config_manager.py  test_engine.py  test_git_ops.py  test_persona.py  test_pre_commit.py  test_update.py  test_wizard.py
(+8 files in other folders)
